[25 August 2007]

* Make tag_counts work with has_many :through

[23 August 2007]

* Make search comparisons case-insensitive across different databases. [Moisés Machado]

* Improve compatiblity with STI. [Moisés Machado]

[25 July 2007]

* Respect custom table names for the Tag and Tagging classes.

* Fix the :exclude option for find_tagged_with

[17 July 2007]

* Make the migration work on edge rails

[8 July 2007]

* find_options_for_tagged_with should not alter its arguments

[1 July 2007]

* Fix incorrect tagging when the case of the tag list is changed.

* Fix deprecated Tag.delimiter accessor.

[23 June 2007]

* Add validation to Tag model.

* find_options_for_tagged_with should always return a hash.

* find_tagged_with passing in no tags should return an empty array.

* Improve compatibility with PostgreSQL.

[21 June 2007]

* Remove extra .rb from generated migration file name.

[15 June 2007]

* Introduce TagList class.

* Various cleanups and improvements.

* Use TagList.delimiter now, not Tag.delimiter. Tag.delimiter will be removed at some stage.

[11 June 2007]

* Restructure the creation of the options for find_tagged_with [Thijs Cadier]

* Add an example migration with a generator.

* Add caching.

* Fix compatibility with Ruby < 1.8.6

[23 April 2007]

* Make tag_list to respect Tag.delimiter

[31 March 2007]

* Add Tag.delimiter accessor to change how tags are parsed.
* Fix :include => :tags when used with find_tagged_with

[7 March 2007]

* Fix tag_counts for SQLServer [Brad Young]

[21 Feb 2007]

* Use scoping instead of TagCountsExtension [Michael Schuerig]

[7 Jan 2007]

* Add :match_all to find_tagged_with [Michael Sheakoski]