@@ -4,13 +4,9 @@ class Tag < ActiveRecord::Base
   validates_presence_of :name
   validates_uniqueness_of :name
   
-  class << self
-    delegate :delimiter, :delimiter=, :to => TagList
-    
-    # LIKE is used for cross-database case-insensitivity
-    def find_or_create_with_like_by_name(name)
-      find(:first, :conditions => ["name LIKE ?", name]) || create(:name => name)
-    end
+  # LIKE is used for cross-database case-insensitivity
+  def self.find_or_create_with_like_by_name(name)
+    find(:first, :conditions => ["name LIKE ?", name]) || create(:name => name)
   end
   
   def ==(object)
